--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
 # ignore everythings
-*
-
+/*
+# except .config folder
+!/.config
+/.config/*
+!/.config/alacritty
+!/.config/bspwm
+!/.config/picom
+!/.config/polybar
+!/.config/rofi
+!/.config/sxhkd
+!/.config/nvim
 # except dot files 
 !.gitignore
-!.config/
 !.bashrc
 !.zshrc
+!.Xresources
+!.xprofile
+!.xinitrc
+!.tmux.conf
