customize onedark theme of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,7 +117,12 @@ if-shell "[ -f ~/.tmux_local.conf ]" 'source ~/.tmux_local.conf'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+
+set -g @plugin 'namnh2204/tmux-onedark-theme'
+set -g @onedark_widgets_x "#(ip -4 -br a sh dev enp30s0 | awk {'print $3'} | cut -f1 -d/)"
+set -g @onedark_widgets_y "祥#(uptime | awk '{print $3}'|sed 's/,//')"
+set -g @onedark_widgets_z "#h"
+
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
