update new config for laptop

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,6 +16,9 @@
 ;
 ;==========================================================
 
+[global/wm]
+include-file= ~/.config/polybar/system
+
 [colors]
 background = ${xrdb:background}
 foreground = ${xrdb:foreground}
@@ -40,32 +43,35 @@ dark-light = #272A2B
 active-light = #313435
 
 
-[bar/example]
-monitor = HDMI-0
-width =  100%
-height = 18
+[bar/top]
+monitor = eDP
+width = 98.6%
+height = 2%
 padding-left = 1
 padding-right = 1
+offset-x = 0.7%
+offset-y = 0.7%
+radius = 5.0
 enable-ipc = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = false
-border-top-size = 5
-border-bottom-size = 5
+border-top-size = 10
+border-bottom-size = 10
 border-top-color = ${colors.background}
 border-bottom-color = ${colors.background}
 
-line-size = 1
+line-size = 2
 wm-restack = bspwm
 
 modules-left = round-left bspwm round-right empty-space round-left polywins round-right
-modules-center = round-left xwindow round-right
-modules-right = pulseaudio network round-left cpu round-right wlan mem round-left popup-calendar round-right powermenu
-font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=9;3
-font-1 = JetBrainsMono Nerd Font:size=12;4
-font-2 = Material Design Icons:style=Regular:size=10;3
-font-3 = Unifont:style=Sans-Serif:size=9;3
+modules-center = 
+modules-right = pulseaudio backlight network wlan round-left cpu round-right mem battery round-left popup-calendar round-right powermenu
+font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=20;3
+font-1 = JetBrainsMono Nerd Font:size=20;4
+font-2 = Material Design Icons:style=Regular:size=20;3
+font-3 = Unifont:style=Sans-Serif:size=18;3
 
 
 [module/polywins]
@@ -153,13 +159,14 @@ type = internal/pulseaudio
 
 ; Sink to be used, if it exists (find using `paclt list sinks`, name field)
 ; If not, uses default sink
-sink = alsa_output.pci-0000_24_00.3.analog-stereo
+sink = ${system.sink}
+
 
 format-volume = <label-volume> <bar-volume>
 label-volume = " "  
 label-volume-foreground = ${colors.foreground}
 format-muted-foreground = ${colors.foreground}
-label-muted = "  %{F#565c64}━━━━━━━━━"
+label-muted = "  %{F#565c64}━━━━━━━━━━"
 
 format-muted-padding = 1
 
@@ -196,7 +203,7 @@ click-left = ~/.config/polybar/scripts/popup-calendar.sh --popup &
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 format = <label>
-format-prefix = " ﬙ " 
+format-prefix = " ﬙" 
 label = %output% MB
 label-padding = 1
 format-prefix-foreground = #d19a66
@@ -214,7 +221,7 @@ content-foreground = #f25287
 
 [module/network]
 type = internal/network
-interface = enp30s0 
+interface = ${system.network_interface} 
 interval = 3.0
 accumulate-stats = true
 unknown-as-up = true
@@ -229,7 +236,7 @@ label-disconnected-padding = 2
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = ${system.wlan_interface}
 interval = 3.0
 format-connected =  <label-connected>
 label-connected = "󰤪  " 
@@ -238,16 +245,16 @@ label-connected-foreground = #A3BE8C
 
 [module/battery]
 type = internal/battery
-battery = BAT1
-adapter = AC0
+battery = ${system.battery}
+adapter = ${system.adapter}
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
+format-charging = <animation-charging><label-charging>
 label-charging = %percentage%%
 format-charging-foreground = ${colors.color4}
 format-charging-background = ${colors.background}
 
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <ramp-capacity><label-discharging>
 label-discharging = %percentage%%
 format-discharging-foreground = ${colors.foreground}
 format-discharging-background = ${colors.background}
@@ -282,8 +289,10 @@ format-charging-padding = 1
 format-discharging-padding = 1
 
 
-[module/xbacklight]
-type = internal/xbacklight
+[module/backlight]
+type = internal/backlight
+card= ${system.backlight_card}
+enable-scroll = true
 format = <label>
 format-prefix = "  "
 label = %percentage%
@@ -296,7 +305,7 @@ format-padding = 1
 type = internal/cpu
 interval = 2.5
 
-format-prefix ="  " 
+format-prefix =" " 
 format =  <label> 
 
 label = CPU %percentage:2%%
