--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,10 +27,10 @@ set -g renumber-windows on
 
 # # act like GNU screen
 # # Free the original Ctrl-b prefix keybinding
-# unbind C-b
-#
-# # Setting the prefix from C-b to C-a
-# set -g prefix C-a
+unbind C-b
+
+# Setting the prefix from C-b to C-a
+set -g prefix F12 
 #
 # # Ensure that we can send Ctrl-A to other apps
 # bind-key C-a send-prefix
