--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -69,7 +69,7 @@ window:
   #   - SimpleFullscreen
   startup_mode: Maximized
 
-background_opacity: 0.8
+  opacity: 0.8
 
 colors:
   # Default colors
