fiz fzf key bindings and update config

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,5 @@
 #no-dnd-shadow = true;
 #no-dock-shadow = true;
-clear-shadow = true;
 shadow = true;
 
 shadow-radius = 10;
@@ -78,7 +77,9 @@ fade-out-step = 0.3;
 # blur-strength = 8;
 # blur-kernel = "3x3box"
 
-# corner-radius = 6;
-# rounded-corners-exclude = [
-#   "class_g = 'Polybar'",
-# ];
+corner-radius = 6;
+rounded-corners-exclude = [
+  "class_g = 'Polybar'",
+];
+
+blur-strength = 4
