--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -4,8 +4,7 @@
 ;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
 ;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
 ;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗ ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
 ;
@@ -44,14 +43,14 @@ active-light = #313435
 
 
 [bar/top]
-monitor = eDP
+monitor = ${system.monitor_1}
 width = 98.6%
 height = 2%
 padding-left = 1
 padding-right = 1
 offset-x = 0.7%
 offset-y = 0.7%
-radius = 5.0
+radius = 0.0
 enable-ipc = true
 
 background = ${colors.background}
