--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -4,7 +4,8 @@
 ;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
 ;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
 ;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗ ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗ 
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
 ;
@@ -66,18 +67,18 @@ wm-restack = bspwm
 
 modules-left = round-left bspwm round-right empty-space round-left polywins round-right
 modules-center = 
-modules-right = pulseaudio backlight network wlan round-left cpu round-right mem battery round-left popup-calendar round-right powermenu
-font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=20;3
-font-1 = JetBrainsMono Nerd Font:size=20;4
-font-2 = Material Design Icons:style=Regular:size=20;3
-font-3 = Unifont:style=Sans-Serif:size=18;3
+modules-right = network wlan round-left cpu round-right mem battery pulseaudio round-left popup-calendar round-right powermenu
+font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=16;4
+font-1 = JetBrainsMono Nerd Font:size=20;5
+font-2 = Material Design Icons:style=Regular:size=16;3
+font-3 = Unifont:style=Sans-Serif:size=16;3
 
 
 [module/polywins]
 type = custom/script
 exec = ~/.config/polybar/scripts/polywins.sh 2>/dev/null
 format = <label>
-format-background = #2a2e36
+format-background = ${colors.color0}
 label = %output%
 label-padding = 0
 tail = true
@@ -91,13 +92,13 @@ content = "  "
 [module/round-left]
 type = custom/text
 content = %{T3}%{T-}
-content-foreground = #2a2e36
+content-foreground = ${colors.color0}
 
 
 [module/round-right]
 type = custom/text
 content = %{T3}%{T-}
-content-foreground = #2a2e36
+content-foreground = ${colors.color0}
 
 
 [module/roundd-left]
@@ -127,29 +128,28 @@ ws-icon-3 = 4;%{F#81A1C1}
 ws-icon-4 = 5;%{F#A3BE8C}
 
 label-separator = " "
-label-separator-background = #2a2e36
+label-separator-background = ${colors.color0}
 
 label-focused = %icon:0:11%
 ;label-focused-underline = ${colors.foreground}
 label-focused-padding = 1
-label-focused-background = #2a2e36
+label-focused-background = ${colors.color0}
 label-focused-margin = 0
 
 label-occupied = %icon:0:11% 
-label-occupied-foreground = #646870  
-label-occupied-background = #2a2e36
+label-occupied-background = ${colors.color0}
 label-occupied-padding = 1
 label-occupied-margin = 0 
 
 label-empty = %icon%
 label-empty-foreground = ${colors.foreground}
 label-empty-padding = 1
-label-empty-background = #2a2e36
+label-empty-background = ${colors.color0}
 label-empty-margin = 0 
 
 label-urgent = %icon:0:11%
-label-urgent-foreground = #88C0D0
-label-urgent-background = #2a2e36
+label-urgent-foreground = ${colors.color8}
+label-urgent-background = ${colors.color0}
 label-urgent-padding = 1
 
 
@@ -160,41 +160,24 @@ type = internal/pulseaudio
 ; If not, uses default sink
 sink = ${system.sink}
 
+format-volume = <ramp-volume>
+ramp-volume-foreground = ${colors.color13}
+label-volume-foreground = ${colors.color13}
+label-muted-foreground = ${colors.color8}
 
-format-volume = <label-volume> <bar-volume>
-label-volume = " "  
-label-volume-foreground = ${colors.foreground}
-format-muted-foreground = ${colors.foreground}
-label-muted = "  %{F#565c64}━━━━━━━━━━"
+label-muted = %{T3}ﱝ
+ramp-volume-0 = %{T3}
+ramp-volume-1 = %{T3}
+ramp-volume-2 = %{T3}墳
+ramp-volume-3 = %{T3}
 
-format-muted-padding = 1
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #61afef
-bar-volume-foreground-1 = #61afef
-bar-volume-foreground-2 = #61afef
-bar-volume-foreground-3 = #61afef
-bar-volume-foreground-4 = #61afef
-bar-volume-foreground-5 = #61afef
-bar-volume-foreground-6 = #61afef
-bar-volume-gradient = false
-bar-volume-indicator = 
-bar-volume-indicator-foreground = #61afef
-bar-volume-indicator-font = 2
-bar-volume-fill = ━ 
-bar-volume-fill-foreground = #61afef
-bar-volume-fill-font = 2
-bar-volume-empty = ━
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = #565c64
-format-volume-padding = 1
 
 [module/popup-calendar]
 type = custom/script
 exec = ~/.config/polybar/scripts/popup-calendar.sh
 interval = 5
-format-background = #2a2e36
-format-foreground = #82868e
+format-background = ${colors.color0}
+format-foreground = ${colors.color5}
 click-left = ~/.config/polybar/scripts/popup-calendar.sh --popup &
 
 
@@ -205,17 +188,17 @@ format = <label>
 format-prefix = " ﬙" 
 label = %output% MB
 label-padding = 1
-format-prefix-foreground = #d19a66
-format-foreground = #d19a66
+format-prefix-foreground = ${colors.color9}
+format-foreground = ${colors.color9}
 
 
 [module/powermenu]
 type = custom/text 
 content ="" 
-content-padding = 2
+content-padding = 1
 click-left = systemctl poweroff
 click-right = systemctl reboot
-content-foreground = #f25287
+content-foreground = ${colors.color8}
 
 
 [module/network]
@@ -226,7 +209,7 @@ accumulate-stats = true
 unknown-as-up = true
 
 label-connected = %{F#A3BE8C}
-label-disconnected = %{F#ff9b93}
+; label-disconnected = %{F#ff9b93}
 label-connected-font = 2
 label-disconnected-font = 2
 label-connected-padding = 2   
@@ -238,8 +221,8 @@ type = internal/network
 interface = ${system.wlan_interface}
 interval = 3.0
 format-connected =  <label-connected>
-label-connected = "󰤪  " 
-label-connected-foreground = #A3BE8C 
+label-connected = " " 
+label-connected-foreground = ${colors.color12}
 
 
 [module/battery]
@@ -250,7 +233,7 @@ full-at = 98
 
 format-charging = <animation-charging><label-charging>
 label-charging = %percentage%%
-format-charging-foreground = ${colors.color4}
+format-charging-foreground = ${colors.color11}
 format-charging-background = ${colors.background}
 
 format-discharging = <ramp-capacity><label-discharging>
@@ -259,12 +242,12 @@ format-discharging-foreground = ${colors.foreground}
 format-discharging-background = ${colors.background}
 
 format-full-prefix = "  "
-format-full-prefix-foreground = #A0E8A2
-format-foreground = ${colors.color4}
+format-full-prefix-foreground = ${color.color11}
+format-foreground = ${colors.color11}
 format-background = ${colors.background}
 
 label-discharging-foreground = ${colors.foreground}
-ramp-capacity-foreground =  #A0E8A2  
+ramp-capacity-foreground =  ${colors.color11}
 label-charging-foreground = ${colors.foreground}
 
 label-padding = 1
@@ -281,7 +264,7 @@ animation-charging-2 = "  "
 animation-charging-3 = "  " 
 animation-charging-4 = "  "
 
-animation-charging-foreground = #DF8890
+animation-charging-foreground = ${colors.color8}
 animation-charging-framerate = 750
 
 format-charging-padding = 1
@@ -292,11 +275,15 @@ format-discharging-padding = 1
 type = internal/backlight
 card= ${system.backlight_card}
 enable-scroll = true
-format = <label>
-format-prefix = "  "
-label = %percentage%
-format-prefix-foreground = #61afef
-label-foreground =   #D8DEE9
+format = <ramp>
+ramp-0 = %{T2}%{T-}
+ramp-1 = %{T2}%{T-}
+ramp-2 = %{T2}%{T-}
+ramp-3 = %{T2}%{T-}
+ramp-4 = %{T2}%{T-}
+label = %percentage:3%%
+format-foreground = ${colors.color10}
+label-foreground =  ${colors.color10}
 format-padding = 1
 
 
@@ -308,12 +295,13 @@ format-prefix =" "
 format =  <label> 
 
 label = CPU %percentage:2%%
-format-background = #2a2e36
-format-foreground = #989cff
+format-background = ${colors.color0}
+format-foreground = ${colors.color14}
 
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-format-background = #2a2e36
-format-foreground = #82868e
+format-background = ${colors.color0}
+format-foreground = ${colors.color5}
+
