--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -67,7 +67,7 @@ wm-restack = bspwm
 
 modules-left = round-left bspwm round-right empty-space round-left polywins round-right
 modules-center = 
-modules-right = network wlan round-left cpu round-right mem battery pulseaudio round-left popup-calendar round-right powermenu
+modules-right = network wlan round-left cpu round-right mem battery pulseaudio empty-space round-left popup-calendar round-right powermenu
 font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=16;4
 font-1 = JetBrainsMono Nerd Font:size=20;5
 font-2 = Material Design Icons:style=Regular:size=16;3
