--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -52,7 +52,7 @@ padding-right = 1
 offset-x = 0.7%
 offset-y = 0.7%
 radius = 0.0
-enable-ipc = true
+enable-ipc = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -182,11 +182,12 @@ click-left = ~/.config/polybar/scripts/popup-calendar.sh --popup &
 
 
 [module/mem]
-type = custom/script
-exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
+type = internal/memory
+interval = 3
+warn-percentage = 95
 format = <label>
 format-prefix = " ﬙" 
-label = %output% MB
+label = %mb_used%
 label-padding = 1
 format-prefix-foreground = ${colors.color9}
 format-foreground = ${colors.color9}
@@ -242,7 +243,7 @@ format-discharging-foreground = ${colors.foreground}
 format-discharging-background = ${colors.background}
 
 format-full-prefix = "  "
-format-full-prefix-foreground = ${color.color11}
+format-full-prefix-foreground = ${colors.color11}
 format-foreground = ${colors.color11}
 format-background = ${colors.background}
 
