--- a/packages.ini
+++ b/packages.ini
@@ -1,5 +1,6 @@
 [Regular]
 # core
+os-prober
 pacman-contrib
 wmctrl
 xclip
@@ -11,7 +12,6 @@ unzip
 htop
 xbindkeys
 xdotool
-linux-firmware-qlogic
 light
 gnome-keyring
 libsecret
@@ -34,7 +34,6 @@ mpd
 dunst
 libfm
 lxappearance
-xorg-fonts-misc
 # Themes
 arc-gtk-theme
 papirus-icon-theme
@@ -59,14 +58,10 @@ ttf-roboto
 # Apps
 leafpad
 neofetch
-parted
-file-roller
-qpdfview
 rsync
 curl
 vim
 git
-os-prober
 # screenshort
 maim
 openssh
@@ -77,7 +72,6 @@ fzf
 ripgrep
 lazygit
 yad
-xdotool
 [AUR]
 # Fonts
 nerd-fonts-jetbrains-mono
@@ -87,11 +81,10 @@ ttf-material-design-icons-extended
 # Bspwm tools
 polybar
 ibus-bamboo-git
-wmctrl
 # Bluetooth TUI
 bluetuith
-[nvidia-gpu]
-nvidia
-nvidia-utils
-[amd-gpu]
+linux-enable-ir-emitter
+
+# nvidia
+# nvidia-utils
 xf86-video-amdgpu
