--- a/packages.ini
+++ b/packages.ini
@@ -1,5 +1,6 @@
 [Regular]
 # core
+amd-ucode
 linux-headers
 linux-lts-headers
 os-prober
@@ -36,6 +37,7 @@ mpd
 dunst
 libfm
 lxappearance
+polybar
 # Themes
 arc-gtk-theme
 papirus-icon-theme
@@ -81,12 +83,10 @@ siji-git
 ttf-unifont
 ttf-material-design-icons-extended
 # Bspwm tools
-polybar
-ibus-bamboo-git
+ibus-bamboo
 # Bluetooth TUI
 bluetuith
 linux-enable-ir-emitter
 
 # nvidia
 # nvidia-utils
-xf86-video-amdgpu
