--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [global/wm]
-include-file= ~/.config/polybar/system
+include-file= ~/.config/polybar/system.ini
 
 [colors]
 background = ${xrdb:background}
@@ -42,75 +42,68 @@ color15 = ${xrdb:color15}
 dark-light = #272A2B 
 active-light = #313435
 
-
-[bar/top]
-monitor = ${system.monitor_1}
-width = 98.6%
-height = 2%
-padding-left = 1
-padding-right = 1
-offset-x = 0.7%
+[configs]
 offset-y = 0.7%
-radius = 0.0
+font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=16;4
+font-1 = JetBrainsMono Nerd Font:size=22;5
+font-2 = Material Design Icons:style=Regular:size=16;3
+font-3 = Unifont:style=Sans-Serif:size=16;3
+height = 2.2%
+
+[bar/bar1]
+monitor = ${system.monitor_1}
+width = 99%
+height = ${configs.height}
+offset-x = 0.5%
+offset-y = ${configs.offset-y}
 enable-ipc = false
 
-background = ${colors.background}
+background = #00ffffff
 foreground = ${colors.foreground}
 bottom = false
-border-top-size = 10
-border-bottom-size = 10
-border-top-color = ${colors.background}
-border-bottom-color = ${colors.background}
 
-line-size = 2
 wm-restack = bspwm
 
 modules-left = round-left bspwm round-right empty-space round-left polywins round-right
-modules-center = 
-modules-right = network wlan round-left cpu round-right mem battery pulseaudio empty-space round-left popup-calendar round-right powermenu
-font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=16;4
-font-1 = JetBrainsMono Nerd Font:size=20;5
-font-2 = Material Design Icons:style=Regular:size=16;3
-font-3 = Unifont:style=Sans-Serif:size=16;3
+modules-center = round-left popup-calendar round-right
+modules-right = round-left module-space network wlan module-space cpu module-space mem module-space pulseaudio module-space battery round-right
+font-0 = ${configs.font-0}
+font-1 = ${configs.font-1}
+font-2 = ${configs.font-2}
+font-3 = ${configs.font-3}
+
+
+[module/module-space]
+type = custom/text
+content = " "
+content-foreground = ${colors.background}
+content-background = ${colors.background}
+
+[module/empty-space]
+type = custom/text
+content = " "
+
+[module/round-left]
+type = custom/text
+content = %{T3}%{T-}
+content-foreground = ${colors.background}
+
+
+[module/round-right]
+type = custom/text
+content = %{T3}%{T-}
+content-foreground = ${colors.background}
 
 
 [module/polywins]
 type = custom/script
 exec = ~/.config/polybar/scripts/polywins.sh 2>/dev/null
 format = <label>
-format-background = ${colors.color0}
+format-background = ${colors.background}
+format-foreground = ${colors.foreground}
 label = %output%
 label-padding = 0
 tail = true
-
-
-[module/empty-space]
-type = custom/text
-content = "  "
-
-
-[module/round-left]
-type = custom/text
-content = %{T3}%{T-}
-content-foreground = ${colors.color0}
-
-
-[module/round-right]
-type = custom/text
-content = %{T3}%{T-}
-content-foreground = ${colors.color0}
-
-
-[module/roundd-left]
-type = custom/text
-content = %{T3}%{T-}
-content-foreground = #a3be8c 
-
-
-[module/roundd-right]
-type = custom/text
-content = %{T3}%{T-}
-content-foreground = #a3be8c
 
 
 [module/bspwm]
@@ -128,28 +121,28 @@ ws-icon-3 = 4;%{F#81A1C1}
 ws-icon-4 = 5;%{F#A3BE8C}
 
 label-separator = " "
-label-separator-background = ${colors.color0}
+label-separator-background = ${colors.background}
 
 label-focused = %icon:0:11%
 ;label-focused-underline = ${colors.foreground}
 label-focused-padding = 1
-label-focused-background = ${colors.color0}
+label-focused-background = ${colors.background}
 label-focused-margin = 0
 
 label-occupied = %icon:0:11% 
-label-occupied-background = ${colors.color0}
+label-occupied-background = ${colors.background}
 label-occupied-padding = 1
 label-occupied-margin = 0 
 
 label-empty = %icon%
 label-empty-foreground = ${colors.foreground}
 label-empty-padding = 1
-label-empty-background = ${colors.color0}
+label-empty-background = ${colors.background}
 label-empty-margin = 0 
 
 label-urgent = %icon:0:11%
 label-urgent-foreground = ${colors.color8}
-label-urgent-background = ${colors.color0}
+label-urgent-background = ${colors.background}
 label-urgent-padding = 1
 
 
@@ -160,23 +153,23 @@ type = internal/pulseaudio
 ; If not, uses default sink
 sink = ${system.sink}
 
-format-volume = <ramp-volume>
+format-volume = <ramp-volume> <label-volume>
+format-volume-background = ${colors.background}
 ramp-volume-foreground = ${colors.color13}
 label-volume-foreground = ${colors.color13}
 label-muted-foreground = ${colors.color8}
 
-label-muted = %{T3}ﱝ
-ramp-volume-0 = %{T3}
-ramp-volume-1 = %{T3}
-ramp-volume-2 = %{T3}墳
-ramp-volume-3 = %{T3}
-
+label-muted = "ﱝ 0% "
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 [module/popup-calendar]
 type = custom/script
 exec = ~/.config/polybar/scripts/popup-calendar.sh
 interval = 5
-format-background = ${colors.color0}
+format = <label>
+format-background = ${colors.background}
 format-foreground = ${colors.color5}
 click-left = ~/.config/polybar/scripts/popup-calendar.sh --popup &
 
@@ -191,6 +184,7 @@ label = %mb_used%
 label-padding = 1
 format-prefix-foreground = ${colors.color9}
 format-foreground = ${colors.color9}
+format-background = ${colors.background}
 
 
 [module/powermenu]
@@ -221,10 +215,64 @@ label-disconnected-padding = 2
 type = internal/network
 interface = ${system.wlan_interface}
 interval = 3.0
-format-connected =  <label-connected>
-label-connected = " " 
+; Available tags:
+;   <label-connected> (default)
+;   <ramp-signal>
+format-connected = <ramp-signal> <label-connected>
+format-connected-background = ${colors.background}
+
+; Available tags:
+;   <label-disconnected> (default)
+format-disconnected = <label-disconnected>
+format-disconnected-background = ${colors.background}
+
+; Available tags:
+;   <label-connected> (default)
+;   <label-packetloss>
+;   <animation-packetloss>
+format-packetloss = <animation-packetloss> <label-connected>
+format-packaetloss-background = ${colors.background}
+
+; All labels support the following tokens:
+;   %ifname%    [wireless+wired]
+;   %local_ip%  [wireless+wired]
+;   %local_ip6% [wireless+wired]
+;   %essid%     [wireless]
+;   %signal%    [wireless]
+;   %upspeed%   [wireless+wired]
+;   %downspeed% [wireless+wired]
+;   %netspeed%  [wireless+wired] (%upspeed% + %downspeed%) (New in version 3.6.0)
+;   %linkspeed% [wired]
+;   %mac%       [wireless+wired] (New in version 3.6.0)
+
+; Default: %ifname% %local_ip%
+label-connected = %essid%
+label-connected-background = 
 label-connected-foreground = ${colors.color12}
 
+; Default: (none)
+label-disconnected = 󰤮 not connected
+label-disconnected-foreground = ${color.color8}
+
+; Default: (none)
+;label-packetloss = %essid%
+;label-packetloss-foreground = #eefafafa
+
+; Only applies if <ramp-signal> is used
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤨
+ramp-signal-foreground = ${colors.color12}
+
+; Only applies if <animation-packetloss> is used
+animation-packetloss-0 = 󰤫
+animation-packetloss-0-foreground = #ffa64c
+animation-packetloss-1 = 󰤩
+animation-packetloss-1-foreground = #000000
+; Framerate in milliseconds
+animation-packetloss-framerate = 500
 
 [module/battery]
 type = internal/battery
@@ -234,12 +282,14 @@ full-at = 98
 
 format-charging = <animation-charging><label-charging>
 label-charging = %percentage%%
+label-charging-foreground = ${colors.color11}
 format-charging-foreground = ${colors.color11}
 format-charging-background = ${colors.background}
 
 format-discharging = <ramp-capacity><label-discharging>
 label-discharging = %percentage%%
-format-discharging-foreground = ${colors.foreground}
+label-discharging-foreground = ${colors.color11}
+format-discharging-foreground = ${colors.color11}
 format-discharging-background = ${colors.background}
 
 format-full-prefix = "  "
@@ -247,14 +297,14 @@ format-full-prefix-foreground = ${colors.color11}
 format-foreground = ${colors.color11}
 format-background = ${colors.background}
 
-label-discharging-foreground = ${colors.foreground}
 ramp-capacity-foreground =  ${colors.color11}
-label-charging-foreground = ${colors.foreground}
 
 label-padding = 1
 
 ramp-capacity-0 = "  " 
+ramp-capacity-0-foreground = ${colors.color8}
 ramp-capacity-1 = "  " 
+ramp-capacity-1-foreground = ${colors.color8}
 ramp-capacity-2 = "  " 
 ramp-capacity-3 = "  " 
 ramp-capacity-4 = "  "
@@ -265,7 +315,7 @@ animation-charging-2 = "  "
 animation-charging-3 = "  " 
 animation-charging-4 = "  "
 
-animation-charging-foreground = ${colors.color8}
+animation-charging-foreground = ${colors.color11}
 animation-charging-framerate = 750
 
 format-charging-padding = 1
@@ -292,17 +342,17 @@ format-padding = 1
 type = internal/cpu
 interval = 2.5
 
-format-prefix =" " 
+format-prefix ="  " 
 format =  <label> 
 
 label = CPU %percentage:2%%
-format-background = ${colors.color0}
+format-background = ${colors.background}
 format-foreground = ${colors.color14}
 
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-format-background = ${colors.color0}
+format-background = ${colors.background}
 format-foreground = ${colors.color5}
 
