--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,7 +11,6 @@ shadow-green = 0.0;
 shadow-blue = 0.0;
 
 shadow-exclude = [
-        
                      "name = 'stalonetray'",
                      "name = 'polybar'",
                      "name = 'plank'",
@@ -53,7 +52,7 @@ wintypes :
     };
     dock =
     {
-        shadow = true;
+        shadow = false;
     };
     tooltip =
     {
@@ -77,7 +76,7 @@ fade-out-step = 0.3;
 # blur-strength = 8;
 # blur-kernel = "3x3box"
 
-corner-radius = 6;
+corner-radius = 5;
 rounded-corners-exclude = [
   "class_g = 'Polybar'",
 ];
