--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -252,7 +252,7 @@ label-connected-foreground = ${colors.color12}
 
 ; Default: (none)
 label-disconnected = 󰤮 not connected
-label-disconnected-foreground = ${color.color8}
+label-disconnected-foreground = ${colors.color8}
 
 ; Default: (none)
 ;label-packetloss = %essid%
