--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -251,7 +251,7 @@ label-connected-background =
 label-connected-foreground = ${colors.color12}
 
 ; Default: (none)
-label-disconnected = 󰤮 not connected
+label-disconnected = 󰤮 disconnected
 label-disconnected-foreground = ${colors.color8}
 
 ; Default: (none)
