--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -66,12 +66,33 @@ wm-restack = bspwm
 
 modules-left = round-left bspwm round-right empty-space round-left polywins round-right
 modules-center = round-left popup-calendar round-right
-modules-right = round-left module-space network wlan module-space cpu module-space mem module-space pulseaudio module-space battery round-right
+modules-right = round-left module-space network module-space wlan module-space cpu module-space mem module-space pulseaudio module-space battery round-right
 font-0 = ${configs.font-0}
 font-1 = ${configs.font-1}
 font-2 = ${configs.font-2}
 font-3 = ${configs.font-3}
 
+[bar/bar2]
+monitor = ${system.monitor_2}
+width = 99%
+height = ${configs.height}
+offset-x = 0.5%
+offset-y = ${configs.offset-y}
+enable-ipc = false
+
+background = #00ffffff
+foreground = ${colors.foreground}
+bottom = false
+
+wm-restack = bspwm
+
+modules-left = round-left bspwm round-right empty-space round-left polywins round-right
+modules-center = round-left popup-calendar round-right
+modules-right = round-left module-space network wlan module-space cpu module-space mem module-space pulseaudio module-space battery round-right
+font-0 = ${configs.font-0}
+font-1 = ${configs.font-1}
+font-2 = ${configs.font-2}
+font-3 = ${configs.font-3}
 
 [module/module-space]
 type = custom/text
@@ -119,6 +140,7 @@ ws-icon-1 = 2;%{F#ff9b93}
 ws-icon-2 = 3;%{F#95e1d3}
 ws-icon-3 = 4;%{F#81A1C1}
 ws-icon-4 = 5;%{F#A3BE8C}
+ws-icon-5 = 6;%{F#C678DD}
 
 label-separator = " "
 label-separator-background = ${colors.background}
@@ -203,12 +225,14 @@ interval = 3.0
 accumulate-stats = true
 unknown-as-up = true
 
-label-connected = %{F#A3BE8C}
-; label-disconnected = %{F#ff9b93}
-label-connected-font = 2
-label-disconnected-font = 2
-label-connected-padding = 2   
-label-disconnected-padding = 2   
+format-connected = <label-connected>
+label-connected = "󰌘 "
+format-connected-background = ${colors.background}
+format-connected-foreground = ${colors.color11}
+
+label-disconnected = " "
+format-disconnected-background = ${colors.background}
+format-disconnected-foreground = ${colors.color8}
 
 
 [module/wlan]
@@ -305,15 +329,16 @@ ramp-capacity-0 = "  "
 ramp-capacity-0-foreground = ${colors.color8}
 ramp-capacity-1 = "  " 
 ramp-capacity-1-foreground = ${colors.color8}
+label-charging-capacity-1-foreground = ${colors.color8}
 ramp-capacity-2 = "  " 
 ramp-capacity-3 = "  " 
 ramp-capacity-4 = "  "
 
-animation-charging-0 = "  " 
-animation-charging-1 = "  " 
-animation-charging-2 = "  " 
-animation-charging-3 = "  " 
-animation-charging-4 = "  "
+animation-charging-0 = "  " 
+animation-charging-1 = "  " 
+animation-charging-2 = "  " 
+animation-charging-3 = "  " 
+animation-charging-4 = "  "
 
 animation-charging-foreground = ${colors.color11}
 animation-charging-framerate = 750
