--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -182,6 +182,7 @@ label-volume-foreground = ${colors.color13}
 label-muted-foreground = ${colors.color8}
 
 label-muted = "ﱝ 0% "
+label-muted-background = ${colors.background}
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
@@ -292,9 +293,9 @@ ramp-signal-foreground = ${colors.color12}
 
 ; Only applies if <animation-packetloss> is used
 animation-packetloss-0 = 󰤫
-animation-packetloss-0-foreground = #ffa64c
+animation-packetloss-0-foreground = ${colors.color9}
 animation-packetloss-1 = 󰤩
-animation-packetloss-1-foreground = #000000
+animation-packetloss-1-foreground =${colors.color9} 
 ; Framerate in milliseconds
 animation-packetloss-framerate = 500
 
